split long lines into multiple lines

--- a/tasks/centos7.yml
+++ b/tasks/centos7.yml
@@ -1,7 +1,10 @@
 ---
 ### CentOS 7.0
 - name: CentOS 7.0 BIOS
-  command: "fast-vm import_image centos-7.0 {{ public_image_url_base }}/generated/6g__centos-7.0.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
+  command: >-
+    fast-vm import_image centos-7.0 {{ public_image_url_base }}/generated/6g__centos-7.0.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.0"
   tags:
@@ -9,7 +12,10 @@
     - centos7_0
 
 - name: CentOS 7.0 UEFI
-  command: "fast-vm import_image centos-7.0-uefi {{ public_image_url_base }}/generated/6g__centos-7.0-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-7.0-current-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks-uefi.sh"
+  command: >-
+    fast-vm import_image centos-7.0-uefi {{ public_image_url_base }}/generated/6g__centos-7.0-uefi.img.xz
+    {{ xml_url_base }}/centos/xml/centos-7.0-current-uefi.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks-uefi.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.0-uefi"
   tags:
@@ -18,7 +24,10 @@
 
 ### CentOS 7.1
 - name: CentOS 7.1 BIOS
-  command: "fast-vm import_image centos-7.1 {{ public_image_url_base }}/generated/6g__centos-7.1.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
+  command: >-
+    fast-vm import_image centos-7.1 {{ public_image_url_base }}/generated/6g__centos-7.1.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.1"
   tags:
@@ -26,7 +35,10 @@
     - centos7_1
 
 - name: CentOS 7.1 UEFI
-  command: "fast-vm import_image centos-7.1-uefi {{ public_image_url_base }}/generated/6g__centos-7.1-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-7.0-current-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks-uefi.sh"
+  command: >-
+    fast-vm import_image centos-7.1-uefi {{ public_image_url_base }}/generated/6g__centos-7.1-uefi.img.xz
+    {{ xml_url_base }}/centos/xml/centos-7.0-current-uefi.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks-uefi.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.1-uefi"
   tags:
@@ -35,7 +47,10 @@
 
 ### CentOS 7.2
 - name: CentOS 7.2 BIOS
-  command: "fast-vm import_image centos-7.2 {{ public_image_url_base }}/generated/6g__centos-7.2.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
+  command: >-
+    fast-vm import_image centos-7.2 {{ public_image_url_base }}/generated/6g__centos-7.2.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.2"
   tags:
@@ -43,7 +58,10 @@
     - centos7_2
 
 - name: CentOS 7.2 UEFI
-  command: "fast-vm import_image centos-7.2-uefi {{ public_image_url_base }}/generated/6g__centos-7.2-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-7.0-current-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks-uefi.sh"
+  command: >-
+    fast-vm import_image centos-7.2-uefi {{ public_image_url_base }}/generated/6g__centos-7.2-uefi.img.xz
+    {{ xml_url_base }}/centos/xml/centos-7.0-current-uefi.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks-uefi.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.2-uefi"
   tags:
@@ -52,7 +70,10 @@
 
 ### CentOS 7.3
 - name: CentOS 7.3 BIOS
-  command: "fast-vm import_image centos-7.3 {{ public_image_url_base }}/generated/6g__centos-7.3.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
+  command: >-
+    fast-vm import_image centos-7.3 {{ public_image_url_base }}/generated/6g__centos-7.3.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.3"
   tags:
@@ -60,7 +81,10 @@
     - centos7_3
 
 - name: CentOS 7.3 UEFI
-  command: "fast-vm import_image centos-7.3-uefi {{ public_image_url_base }}/generated/6g__centos-7.3-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-7.0-current-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks-uefi.sh"
+  command: >-
+    fast-vm import_image centos-7.3-uefi {{ public_image_url_base }}/generated/6g__centos-7.3-uefi.img.xz
+    {{ xml_url_base }}/centos/xml/centos-7.0-current-uefi.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks-uefi.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.3-uefi"
   tags:
@@ -69,7 +93,10 @@
 
 ### CentOS 7.4
 - name: CentOS 7.4 BIOS
-  command: "fast-vm import_image centos-7.4 {{ public_image_url_base }}/generated/6g__centos-7.4.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
+  command: >-
+    fast-vm import_image centos-7.4 {{ public_image_url_base }}/generated/6g__centos-7.4.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.4"
   tags:
@@ -78,7 +105,10 @@
 
 ### CentOS 7.5
 - name: CentOS 7.5 BIOS
-  command: "fast-vm import_image centos-7.5 {{ public_image_url_base }}/generated/6g__centos-7.5.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
+  command: >-
+    fast-vm import_image centos-7.5 {{ public_image_url_base }}/generated/6g__centos-7.5.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.5"
   tags:
@@ -86,7 +116,10 @@
     - centos7_5
 
 - name: CentOS 7.5 UEFI
-  command: "fast-vm import_image centos-7.5-uefi {{ public_image_url_base }}/generated/6g__centos-7.5-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-7.0-current-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks-uefi.sh"
+  command: >-
+    fast-vm import_image centos-7.5-uefi {{ public_image_url_base }}/generated/6g__centos-7.5-uefi.img.xz
+    {{ xml_url_base }}/centos/xml/centos-7.0-current-uefi.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks-uefi.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.5-uefi"
   tags:
