--- a/tasks/centos6.yml
+++ b/tasks/centos6.yml
@@ -1,7 +1,10 @@
 ---
 ### CentOS 6.3
 - name: CentOS 6.3 BIOS
-  command: "fast-vm import_image centos-6.3 {{ public_image_url_base }}/generated/6g__centos-6.3.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current.xml {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks.sh"
+  command: >-
+    fast-vm import_image centos-6.3 {{ public_image_url_base }}/generated/6g__centos-6.3.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-6.3"
   tags:
@@ -9,7 +12,10 @@
     - centos6_3
 
 - name: CentOS 6.3 UEFI
-  command: "fast-vm import_image centos-6.3-uefi {{ public_image_url_base }}/generated/6g__centos-6.3-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks-uefi.sh"
+  command: >-
+    fast-vm import_image centos-6.3-uefi {{ public_image_url_base }}/generated/6g__centos-6.3-uefi.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current-uefi.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks-uefi.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-6.3-uefi"
   tags:
@@ -24,7 +30,10 @@
 
 ### CentOS 6.4
 - name: CentOS 6.4 BIOS
-  command: "fast-vm import_image centos-6.4 {{ public_image_url_base }}/generated/6g__centos-6.4.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current.xml {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks.sh"
+  command: >-
+    fast-vm import_image centos-6.4 {{ public_image_url_base }}/generated/6g__centos-6.4.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-6.4"
   tags:
@@ -32,7 +41,10 @@
     - centos6_4
 
 - name: CentOS 6.4 UEFI
-  command: "fast-vm import_image centos-6.4-uefi {{ public_image_url_base }}/generated/6g__centos-6.4-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks-uefi.sh"
+  command: >-
+    fast-vm import_image centos-6.4-uefi {{ public_image_url_base }}/generated/6g__centos-6.4-uefi.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current-uefi.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks-uefi.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-6.4-uefi"
   tags:
@@ -47,7 +59,10 @@
 
 ### CentOS 6.5
 - name: CentOS 6.5 BIOS
-  command: "fast-vm import_image centos-6.5 {{ public_image_url_base }}/generated/6g__centos-6.5.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current.xml {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks.sh"
+  command: >-
+    fast-vm import_image centos-6.5 {{ public_image_url_base }}/generated/6g__centos-6.5.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-6.5"
   tags:
@@ -55,7 +70,10 @@
     - centos6_5
 
 - name: CentOS 6.5 UEFI
-  command: "fast-vm import_image centos-6.5-uefi {{ public_image_url_base }}/generated/6g__centos-6.5-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks-uefi.sh"
+  command: >-
+    fast-vm import_image centos-6.5-uefi {{ public_image_url_base }}/generated/6g__centos-6.5-uefi.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current-uefi.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks-uefi.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-6.5-uefi"
   tags:
@@ -70,7 +88,10 @@
 
 ### CentOS 6.6
 - name: CentOS 6.6 BIOS
-  command: "fast-vm import_image centos-6.6 {{ public_image_url_base }}/generated/6g__centos-6.6.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current.xml {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks.sh"
+  command: >-
+    fast-vm import_image centos-6.6 {{ public_image_url_base }}/generated/6g__centos-6.6.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-6.6"
   tags:
@@ -78,7 +99,10 @@
     - centos6_6
 
 - name: CentOS 6.6 UEFI
-  command: "fast-vm import_image centos-6.6-uefi {{ public_image_url_base }}/generated/6g__centos-6.6-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks-uefi.sh"
+  command: >-
+    fast-vm import_image centos-6.6-uefi {{ public_image_url_base }}/generated/6g__centos-6.6-uefi.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current-uefi.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks-uefi.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-6.6-uefi"
   tags:
@@ -93,7 +117,10 @@
 
 ### CentOS 6.7
 - name: CentOS 6.7 BIOS
-  command: "fast-vm import_image centos-6.7 {{ public_image_url_base }}/generated/6g__centos-6.7.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current.xml {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks.sh"
+  command: >-
+    fast-vm import_image centos-6.7 {{ public_image_url_base }}/generated/6g__centos-6.7.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-6.7"
   tags:
@@ -101,7 +128,10 @@
     - centos6_7
 
 - name: CentOS 6.7 UEFI
-  command: "fast-vm import_image centos-6.7-uefi {{ public_image_url_base }}/generated/6g__centos-6.7-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks-uefi.sh"
+  command: >-
+    fast-vm import_image centos-6.7-uefi {{ public_image_url_base }}/generated/6g__centos-6.7-uefi.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current-uefi.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks-uefi.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-6.7-uefi"
   tags:
@@ -116,7 +146,10 @@
 
 ### CentOS 6.8
 - name: CentOS 6.8 BIOS
-  command: "fast-vm import_image centos-6.8 {{ public_image_url_base }}/generated/6g__centos-6.8.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current.xml {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks.sh"
+  command: >-
+    fast-vm import_image centos-6.8 {{ public_image_url_base }}/generated/6g__centos-6.8.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-6.8"
   tags:
@@ -124,7 +157,10 @@
     - centos6_8
 
 - name: CentOS 6.8 UEFI
-  command: "fast-vm import_image centos-6.8-uefi {{ public_image_url_base }}/generated/6g__centos-6.8-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks-uefi.sh"
+  command: >-
+    fast-vm import_image centos-6.8-uefi {{ public_image_url_base }}/generated/6g__centos-6.8-uefi.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current-uefi.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks-uefi.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-6.8-uefi"
   tags:
@@ -139,7 +175,10 @@
 
 ### CentOS 6.9
 - name: CentOS 6.9 BIOS
-  command: "fast-vm import_image centos-6.9 {{ public_image_url_base }}/generated/6g__centos-6.9.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current.xml {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks.sh"
+  command: >-
+    fast-vm import_image centos-6.9 {{ public_image_url_base }}/generated/6g__centos-6.9.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-6.9"
   tags:
@@ -147,7 +186,10 @@
     - centos6_9
 
 - name: CentOS 6.9 UEFI
-  command: "fast-vm import_image centos-6.9-uefi {{ public_image_url_base }}/generated/6g__centos-6.9-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks-uefi.sh"
+  command: >-
+    fast-vm import_image centos-6.9-uefi {{ public_image_url_base }}/generated/6g__centos-6.9-uefi.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current-uefi.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks-uefi.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-6.9-uefi"
   tags:
@@ -162,7 +204,10 @@
 
 ### CentOS 6.10
 - name: CentOS 6.10 BIOS
-  command: "fast-vm import_image centos-6.10 {{ public_image_url_base }}/generated/6g__centos-6.10.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current.xml {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks.sh"
+  command: >-
+    fast-vm import_image centos-6.10 {{ public_image_url_base }}/generated/6g__centos-6.10.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-6.10"
   tags:
@@ -170,7 +215,10 @@
     - centos6_10
 
 - name: CentOS 6.10 UEFI
-  command: "fast-vm import_image centos-6.10-uefi {{ public_image_url_base }}/generated/6g__centos-6.10-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks-uefi.sh"
+  command: >-
+    fast-vm import_image centos-6.10-uefi {{ public_image_url_base }}/generated/6g__centos-6.10-uefi.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current-uefi.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-6-hacks-uefi.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-6.10-uefi"
   tags:
