--- a/tasks/rhel7.yml
+++ b/tasks/rhel7.yml
@@ -1,7 +1,10 @@
 ---
 ### RHEL 7.0
 - name: RHEL 7.0 BIOS
-  command: "fast-vm import_image rhel-7.0 {{ rhel_image_url_base }}/generated/6g__rhel-7.0.img.xz {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh"
+  command: >-
+    fast-vm import_image rhel-7.0 {{ rhel_image_url_base }}/generated/6g__rhel-7.0.img.xz
+    {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml
+    {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.0"
   tags:
@@ -9,7 +12,10 @@
     - rhel7_0
 
 - name: RHEL 7.0 UEFI
-  command: "fast-vm import_image rhel-7.0-uefi {{ rhel_image_url_base }}/generated/6g__rhel-7.0-uefi.img.xz {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh"
+  command: >-
+    fast-vm import_image rhel-7.0-uefi {{ rhel_image_url_base }}/generated/6g__rhel-7.0-uefi.img.xz
+    {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml
+    {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.0-uefi"
   tags:
@@ -18,7 +24,10 @@
 
 ### RHEL 7.1
 - name: RHEL 7.1 BIOS
-  command: "fast-vm import_image rhel-7.1 {{ rhel_image_url_base }}/generated/6g__rhel-7.1.img.xz {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh"
+  command: >-
+    fast-vm import_image rhel-7.1 {{ rhel_image_url_base }}/generated/6g__rhel-7.1.img.xz
+    {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml
+    {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.1"
   tags:
@@ -26,7 +35,10 @@
     - rhel7_1
 
 - name: RHEL 7.1 UEFI
-  command: "fast-vm import_image rhel-7.1-uefi {{ rhel_image_url_base }}/generated/6g__rhel-7.1-uefi.img.xz {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh"
+  command: >-
+    fast-vm import_image rhel-7.1-uefi {{ rhel_image_url_base }}/generated/6g__rhel-7.1-uefi.img.xz
+    {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml
+    {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.1-uefi"
   tags:
@@ -35,7 +47,10 @@
 
 ### RHEL 7.2
 - name: RHEL 7.2 BIOS
-  command: "fast-vm import_image rhel-7.2 {{ rhel_image_url_base }}/generated/6g__rhel-7.2.img.xz {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh"
+  command: >-
+    fast-vm import_image rhel-7.2 {{ rhel_image_url_base }}/generated/6g__rhel-7.2.img.xz
+    {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml
+    {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.2"
   tags:
@@ -43,7 +58,10 @@
     - rhel7_2
 
 - name: RHEL 7.2 UEFI
-  command: "fast-vm import_image rhel-7.2-uefi {{ rhel_image_url_base }}/generated/6g__rhel-7.2-uefi.img.xz {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh"
+  command: >-
+    fast-vm import_image rhel-7.2-uefi {{ rhel_image_url_base }}/generated/6g__rhel-7.2-uefi.img.xz
+    {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml
+    {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.2-uefi"
   tags:
@@ -52,7 +70,10 @@
 
 ### RHEL 7.3
 - name: RHEL 7.3 BIOS
-  command: "fast-vm import_image rhel-7.3 {{ rhel_image_url_base }}/generated/6g__rhel-7.3.img.xz {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh"
+  command: >-
+    fast-vm import_image rhel-7.3 {{ rhel_image_url_base }}/generated/6g__rhel-7.3.img.xz
+    {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml
+    {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.3"
   tags:
@@ -60,7 +81,10 @@
     - rhel7_3
 
 - name: RHEL 7.3 UEFI
-  command: "fast-vm import_image rhel-7.3-uefi {{ rhel_image_url_base }}/generated/6g__rhel-7.3-uefi.img.xz {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh"
+  command: >-
+    fast-vm import_image rhel-7.3-uefi {{ rhel_image_url_base }}/generated/6g__rhel-7.3-uefi.img.xz
+    {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml
+    {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.3-uefi"
   tags:
@@ -69,7 +93,10 @@
 
 ### RHEL 7.4
 - name: RHEL 7.4 BIOS
-  command: "fast-vm import_image rhel-7.4 {{ rhel_image_url_base }}/generated/6g__rhel-7.4.img.xz {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh"
+  command: >-
+    fast-vm import_image rhel-7.4 {{ rhel_image_url_base }}/generated/6g__rhel-7.4.img.xz
+    {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml
+    {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.4"
   tags:
@@ -77,7 +104,10 @@
     - rhel7_4
 
 - name: RHEL 7.4 UEFI
-  command: "fast-vm import_image rhel-7.4-uefi {{ rhel_image_url_base }}/generated/6g__rhel-7.4-uefi.img.xz {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh"
+  command: >-
+    fast-vm import_image rhel-7.4-uefi {{ rhel_image_url_base }}/generated/6g__rhel-7.4-uefi.img.xz
+    {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml
+    {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.4-uefi"
   tags:
@@ -86,7 +116,10 @@
 
 ### RHEL 7.5
 - name: RHEL 7.5 BIOS
-  command: "fast-vm import_image rhel-7.5 {{ rhel_image_url_base }}/generated/6g__rhel-7.5.img.xz {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh"
+  command: >-
+    fast-vm import_image rhel-7.5 {{ rhel_image_url_base }}/generated/6g__rhel-7.5.img.xz
+    {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml
+    {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.5"
   tags:
@@ -94,7 +127,10 @@
     - rhel7_5
 
 - name: RHEL 7.5 UEFI
-  command: "fast-vm import_image rhel-7.5-uefi {{ rhel_image_url_base }}/generated/6g__rhel-7.5-uefi.img.xz {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh"
+  command: >-
+    fast-vm import_image rhel-7.5-uefi {{ rhel_image_url_base }}/generated/6g__rhel-7.5-uefi.img.xz
+    {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml
+    {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.5-uefi"
   tags:
@@ -103,7 +139,10 @@
 
 ### RHEL 7.6
 - name: RHEL 7.6 BIOS
-  command: "fast-vm import_image rhel-7.6 {{ rhel_image_url_base }}/generated/6g__rhel-7.6.img.xz {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh"
+  command: >-
+    fast-vm import_image rhel-7.6 {{ rhel_image_url_base }}/generated/6g__rhel-7.6.img.xz
+    {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml
+    {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.6"
   tags:
@@ -111,7 +150,10 @@
     - rhel7_6
 
 - name: RHEL 7.6 UEFI
-  command: "fast-vm import_image rhel-7.6-uefi {{ rhel_image_url_base }}/generated/6g__rhel-7.6-uefi.img.xz {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh"
+  command: >-
+    fast-vm import_image rhel-7.6-uefi {{ rhel_image_url_base }}/generated/6g__rhel-7.6-uefi.img.xz
+    {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml
+    {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.6-uefi"
   tags:
