--- a/tasks/ubuntu.yml
+++ b/tasks/ubuntu.yml
@@ -1,7 +1,10 @@
 ---
 ### Ubuntu 14.04
 - name: Ubuntu 14.04 BIOS
-  command: "fast-vm import_image ub14.04 {{ public_image_url_base }}/ubuntu-14.04.4-server.img.xz {{ xml_url_base }}/ubuntu/xml/ubuntu-1404-1510.xml {{ hacks_url_base }}/ubuntu/hacks/ubuntu-1404-hacks.sh"
+  command: >-
+    fast-vm import_image ub14.04 {{ public_image_url_base }}/ubuntu-14.04.4-server.img.xz
+    {{ xml_url_base }}/ubuntu/xml/ubuntu-1404-1510.xml
+    {{ hacks_url_base }}/ubuntu/hacks/ubuntu-1404-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}ub14.04"
   tags:
@@ -10,7 +13,10 @@
 
 ### Ubuntu 16.04
 - name: Ubuntu 16.04 BIOS
-  command: "fast-vm import_image ub16.04 {{ public_image_url_base }}/ubuntu-16.04-server.img.xz {{ xml_url_base }}/ubuntu/xml/ubuntu-1604-1610.xml {{ hacks_url_base }}/ubuntu/hacks/ubuntu-1604-hacks.sh"
+  command: >-
+    fast-vm import_image ub16.04 {{ public_image_url_base }}/ubuntu-16.04-server.img.xz
+    {{ xml_url_base }}/ubuntu/xml/ubuntu-1604-1610.xml
+    {{ hacks_url_base }}/ubuntu/hacks/ubuntu-1604-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}ub16.04"
   tags:
@@ -19,7 +25,10 @@
 
 ### Ubuntu 16.10
 - name: Ubuntu 16.10 BIOS
-  command: "fast-vm import_image ub16.10 {{ public_image_url_base }}/ubuntu-16.10-server.img.xz {{ xml_url_base }}/ubuntu/xml/ubuntu-1604-1610.xml {{ hacks_url_base }}/ubuntu/hacks/ubuntu-1610-hacks.sh"
+  command: >-
+    fast-vm import_image ub16.10 {{ public_image_url_base }}/ubuntu-16.10-server.img.xz
+    {{ xml_url_base }}/ubuntu/xml/ubuntu-1604-1610.xml
+    {{ hacks_url_base }}/ubuntu/hacks/ubuntu-1610-hacks.sh
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}ub16.10"
   tags:
