--- a/tasks/rhel6.yml
+++ b/tasks/rhel6.yml
@@ -95,7 +95,9 @@
     - rhel6_3_uefi
 
 - name: RHEL 6.3 UEFI firmware
-  get_url: url="{{ rhel_image_url_base }}/generated/nvram-rhel-6.3-uefi_VARS.fd" dest="/etc/fast-vm/nvram-rhel-6.3-uefi_VARS.fd"
+  get_url:
+    url: "{{ rhel_image_url_base }}/generated/nvram-rhel-6.3-uefi_VARS.fd"
+    dest: "/etc/fast-vm/nvram-rhel-6.3-uefi_VARS.fd"
   tags:
     - rhel6_uefi
     - rhel6_3_uefi
@@ -124,7 +126,9 @@
     - rhel6_4_uefi
 
 - name: RHEL 6.4 UEFI firmware
-  get_url: url="{{ rhel_image_url_base }}/generated/nvram-rhel-6.4-uefi_VARS.fd" dest="/etc/fast-vm/nvram-rhel-6.4-uefi_VARS.fd"
+  get_url:
+    url: "{{ rhel_image_url_base }}/generated/nvram-rhel-6.4-uefi_VARS.fd"
+    dest: "/etc/fast-vm/nvram-rhel-6.4-uefi_VARS.fd"
   tags:
     - rhel6_uefi
     - rhel6_4_uefi
@@ -153,7 +157,9 @@
     - rhel6_5_uefi
 
 - name: RHEL 6.5 UEFI firmware
-  get_url: url="{{ rhel_image_url_base }}/generated/nvram-rhel-6.5-uefi_VARS.fd" dest="/etc/fast-vm/nvram-rhel-6.5-uefi_VARS.fd"
+  get_url:
+    url: "{{ rhel_image_url_base }}/generated/nvram-rhel-6.5-uefi_VARS.fd"
+    dest: "/etc/fast-vm/nvram-rhel-6.5-uefi_VARS.fd"
   tags:
     - rhel6_uefi
     - rhel6_5_uefi
@@ -182,7 +188,9 @@
     - rhel6_6_uefi
 
 - name: RHEL 6.6 UEFI firmware
-  get_url: url="{{ rhel_image_url_base }}/generated/nvram-rhel-6.6-uefi_VARS.fd" dest="/etc/fast-vm/nvram-rhel-6.6-uefi_VARS.fd"
+  get_url:
+    url: "{{ rhel_image_url_base }}/generated/nvram-rhel-6.6-uefi_VARS.fd"
+    dest: "/etc/fast-vm/nvram-rhel-6.6-uefi_VARS.fd"
   tags:
     - rhel6_uefi
     - rhel6_6_uefi
@@ -211,7 +219,9 @@
     - rhel6_7_uefi
 
 - name: RHEL 6.7 UEFI firmware
-  get_url: url="{{ rhel_image_url_base }}/generated/nvram-rhel-6.7-uefi_VARS.fd" dest="/etc/fast-vm/nvram-rhel-6.7-uefi_VARS.fd"
+  get_url:
+    url: "{{ rhel_image_url_base }}/generated/nvram-rhel-6.7-uefi_VARS.fd"
+    dest: "/etc/fast-vm/nvram-rhel-6.7-uefi_VARS.fd"
   tags:
     - rhel6_uefi
     - rhel6_7_uefi
@@ -240,7 +250,9 @@
     - rhel6_8_uefi
 
 - name: RHEL 6.8 UEFI firmware
-  get_url: url="{{ rhel_image_url_base }}/generated/nvram-rhel-6.8-uefi_VARS.fd" dest="/etc/fast-vm/nvram-rhel-6.8-uefi_VARS.fd"
+  get_url:
+    url: "{{ rhel_image_url_base }}/generated/nvram-rhel-6.8-uefi_VARS.fd"
+    dest: "/etc/fast-vm/nvram-rhel-6.8-uefi_VARS.fd"
   tags:
     - rhel6_uefi
     - rhel6_8_uefi
@@ -269,7 +281,9 @@
     - rhel6_9_uefi
 
 - name: RHEL 6.9 UEFI firmware
-  get_url: url="{{ rhel_image_url_base }}/generated/nvram-rhel-6.9-uefi_VARS.fd" dest="/etc/fast-vm/nvram-rhel-6.9-uefi_VARS.fd"
+  get_url:
+    url: "{{ rhel_image_url_base }}/generated/nvram-rhel-6.9-uefi_VARS.fd"
+    dest: "/etc/fast-vm/nvram-rhel-6.9-uefi_VARS.fd"
   tags:
     - rhel6_uefi
     - rhel6_9_uefi
@@ -298,7 +312,9 @@
     - rhel6_10_uefi
 
 - name: RHEL 6.10 UEFI firmware
-  get_url: url="{{ rhel_image_url_base }}/generated/nvram-rhel-6.10-uefi_VARS.fd" dest="/etc/fast-vm/nvram-rhel-6.10-uefi_VARS.fd"
+  get_url:
+    url: "{{ rhel_image_url_base }}/generated/nvram-rhel-6.10-uefi_VARS.fd"
+    dest: "/etc/fast-vm/nvram-rhel-6.10-uefi_VARS.fd"
   tags:
     - rhel6_uefi
     - rhel6_10_uefi
