Add CentOS 7.6 images (BIOS, UEFI)

--- a/tasks/centos7.yml
+++ b/tasks/centos7.yml
@@ -125,3 +125,26 @@
   tags:
     - centos7_uefi
     - centos7_5_uefi
+
+### CentOS 7.6
+- name: CentOS 7.6 BIOS
+  command: >-
+    fast-vm import_image centos-7.6 {{ public_image_url_base }}/generated/6g__centos-7.6.img.xz
+    {{ xml_url_base }}/centos/xml/centos-6.3-current.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh
+  args:
+    creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.6"
+  tags:
+    - centos7
+    - centos7_6
+
+- name: CentOS 7.6 UEFI
+  command: >-
+    fast-vm import_image centos-7.6-uefi {{ public_image_url_base }}/generated/6g__centos-7.6-uefi.img.xz
+    {{ xml_url_base }}/centos/xml/centos-7.0-current-uefi.xml
+    {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks-uefi.sh
+  args:
+    creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.6-uefi"
+  tags:
+    - centos7_uefi
+    - centos7_6_uefi
