update image list
- remove all Ubuntu images
- add Fedora 30
- add Debian 9.9
- rename RHEL 8 Beta to RHEL 8

--- a/tasks/fedora.yml
+++ b/tasks/fedora.yml
@@ -46,3 +46,15 @@
   tags:
     - fedora
     - fedora_29
+
+### Fedora 30
+- name: Fedora 30 BIOS
+  command: >-
+    fast-vm import_image fedora30 {{ public_image_url_base }}/generated/6g__fedora-30.img.xz
+    {{ xml_url_base }}/fedora/xml/fedora-28-current.xml
+    {{ hacks_url_base }}/fedora/hacks/6g_fedora-30-hacks.sh
+  args:
+    creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}fedora30"
+  tags:
+    - fedora
+    - fedora_30
