--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -58,3 +58,15 @@
   tags:
     - debian
     - debian9_8
+
+### Debian 9.9
+- name: Debian 9.9 BIOS
+  command: >-
+    fast-vm import_image debian-9.9 {{ public_image_url_base }}/generated/6g__debian-9.9.img.xz
+    {{ xml_url_base }}/debian/xml/debian-9.xml
+    {{ hacks_url_base }}/debian/hacks/debian-9.sh
+  args:
+    creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}debian-9.9"
+  tags:
+    - debian
+    - debian9_9
